# waddi

./: docker-compose.yml  pyproject.toml
admin_user/: apps.py  models.py
admin_user/migrations/: 0001_initial.py
authentication/: forms.py  managers.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_alter_customuser_options.py  0004_alter_customuser_image.py
customer/: models.py  serializer.py  urls.py  views.py
customer/migrations/: 0001_initial.py
driver/: apps.py  models.py  serializer.py  urls.py  views.py
driver/migrations/: 0001_initial.py  0002_driver_is_online_driver_license.py  0003_remove_driver_license_driver_car_license_and_more.py  0004_driver_city.py  0004_driver_rating.py  0005_merge_0004_driver_city_0004_driver_rating.py  0006_alter_driver_car_license_alter_driver_driver_license.py  0007_driver_actual_car_license_driver_truck.py  0008_alter_driver_truck.py  0009_alter_driver_truck.py  0010_alter_driver_truck.py  0011_alter_driver_truck.py  0012_alter_driver_truck.py
orders/: consumers.py  middlewares.py  models.py  routing.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_orders_chosen_truck_alter_orders_type_and_more.py  0003_orders_pickup_date_orders_time_created_and_more.py  0004_alter_orders_chosen_truck_alter_orders_order_notes_and_more.py  0004_orders_commodity_image_orders_driver_and_more.py  0004_orders_transaction_alter_orders_chosen_truck_and_more.py  0005_alter_orders_chosen_truck_alter_orders_order_state_and_more.py  0011_alter_orders_chosen_truck_and_more.py  (+16 more)
payment/: models.py  serializers.py  urls.py  views.py
waddi/: asgi.py  settings.py  urls.py  wsgi.py
(+6 files in other folders)
