[tool.poetry]
name = "waddi"
version = "0.1.0"
description = ""
authors = ["yomnaafifi <yomnaaafifi162@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
markdown = "^3.6"
django-filter = "^24.2"
pillow = "^10.3.0"
psycopg = "^3.1.18"
drf-spectacular = "^0.27.2"
channels = "^4.1.0"
daphne = "^4.1.2"
channels-redis = "^4.2.0"
pytest-django = "^4.8.0"
pytest-asyncio = "^0.23.7"
geopy = "^2.4.1"
joblib = "^1.4.2"
scikit-learn = "1.2.2"
pandas = "^2.2.2"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
